--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"way/generators": "~2.0"
+	},
+	"require-dev": {
+		"barryvdh/laravel-debugbar": "1.8.*"
 	},
 	"autoload": {
 		"classmap": [
